tests/baselines/reference/templateStringsWithTypeErrorInFunctionExpressionsInSubstitutionExpression.errors.txt
templateStringsWithTypeErrorInFunctionExpressionsInSubstitutionExpression.ts(1,27): error TS2322: Type 'string' is not assignable to type 'number'.


==== templateStringsWithTypeErrorInFunctionExpressionsInSubstitutionExpression.ts (1 errors) ====
    `${function (x: number) { x = "bad"; } }`;
                              ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.